--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "source": "src/index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "push": "npx push-dir --dir=dist --branch=gh-pages --cleanup --verbose",
+    "start": "npx parcel src/index.html",
+    "build": "npx parcel build src/index.html"
   },
   "keywords": [],
   "author": "",
